--- a/ExchangeAGram/Base.lproj/Main.storyboard
+++ b/ExchangeAGram/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                     <size key="itemSize" width="150" height="150"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="5" minY="5" maxX="5" maxY="5"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="feedCell" id="mG8-6J-IWD" customClass="FeedCell" customModule="ExchangeAGram" customModuleProvider="target">
@@ -32,7 +32,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="s50-YX-q7e"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="s50-YX-q7e">
+                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EZt-Tl-71n">
                                                     <rect key="frame" x="8" y="110" width="134" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
@@ -44,7 +46,7 @@
                                         </view>
                                         <connections>
                                             <outlet property="captionLabel" destination="EZt-Tl-71n" id="miR-E2-mQQ"/>
-                                            <outlet property="imageView" destination="s50-YX-q7e" id="KKA-JZ-bge"/>
+                                            <outlet property="imageView" destination="s50-YX-q7e" id="ACY-Jv-TEK"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
