--- a/ExchangeAGram/Base.lproj/Main.storyboard
+++ b/ExchangeAGram/Base.lproj/Main.storyboard
@@ -50,6 +50,12 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="0.0" width="0.0" height="0.0"/>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="0.0" width="0.0" height="0.0"/>
+                                </variation>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="rJa-kx-K4D"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="LlE-5o-xdU"/>
@@ -59,6 +65,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="KQ1-qK-O99">
+                        <barButtonItem key="leftBarButtonItem" title="Profile" id="VXh-Ni-tsr">
+                            <connections>
+                                <segue destination="3Ig-v0-cbS" kind="show" identifier="profileSegue" id="TnK-LO-UxY"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="camera" id="1fn-ZX-OHQ">
                             <connections>
                                 <action selector="snapBarButtonItemTapped:" destination="BYZ-38-t0r" id="1WV-TP-mo9"/>
@@ -72,6 +83,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1117" y="407"/>
+        </scene>
+        <!--Profile View Controller-->
+        <scene sceneID="Yiw-pF-wXO">
+            <objects>
+                <viewController id="3Ig-v0-cbS" customClass="ProfileViewController" customModule="ExchangeAGram" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="FRk-df-3XJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="0dJ-pa-yyj"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6cc-V3-gbc">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zWH-ZN-8hZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1838" y="407"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="bzU-zp-nY3">
