--- a/ExchangeAGram/Base.lproj/Main.storyboard
+++ b/ExchangeAGram/Base.lproj/Main.storyboard
@@ -97,7 +97,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Vr-H8-Qi7"/>
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Vr-H8-Qi7">
+                                <rect key="frame" x="20" y="80" width="100" height="100"/>
+                            </imageView>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sdv-Lx-nok">
                                 <rect key="frame" x="143" y="151" width="441" height="29"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -105,10 +107,11 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vIb-2O-8bX" customClass="FBLoginView">
+                                <rect key="frame" x="20" y="275" width="200" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ifl-48-IcN">
-                                <rect key="frame" x="10" y="220" width="140" height="30"/>
+                                <rect key="frame" x="20" y="220" width="140" height="30"/>
                                 <color key="backgroundColor" red="0.71480003374232814" green="1" blue="0.60669333685430971" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Map View">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
